Added thanks page

--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
+                        <input type="hidden" name="_next" value="//delaterra.github.io/thanks.html" />
+                        <input type="hidden" name="_subject" value="New Delaterra submission!" />
+                        <input type="hidden" name="_cc" value="jmbataller@gmail.com" />
                     </form>
                 </div>
             </div>
