Added responsive css

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <div class="row">
                 <div class="intro-message col-lg-12">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="col-lg-6 col-lg-offset-3">
-                            <img class="img-responsive" src="img/logo.png" alt="">
+                    <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+                        <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+                            <img class="img-responsive" src="img/logo.png" alt="Delaterra">
                         </div>
                         <div class="clearfix"></div>
                         <h2 style="margin-top: 10%;">Our website is under construction</h2>
