--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <title>Delaterra</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/landing-page.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,51 +34,44 @@
 
 </head>
 
-<body>
+<body id="page-top">
 
-    <!-- Header -->
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="intro-message col-lg-12">
-                    <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-                        <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner col-md-8 col-lg-8">
+                <p>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-4 col-md-offset-3 col-sm-offset-2">
                             <img class="img-responsive" src="img/logo.png" alt="Delaterra">
                         </div>
                         <div class="clearfix"></div>
-                        <h2 style="margin-top: 10%;">Our website is under construction</h2>
-                        <p class="lead">
+                        <div style="margin-top: 5%;">
+                            <h2>Our website is under construction</h2>
+                            <p style="color:white">
                             Contact us:
                             <a style="color:white" href="mailto:info@delaterra.co.uk">info@delaterra.co.uk</a>
                         </p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.intro-header -->
-
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="copyright text-muted small">Copyright &copy; Delaterra 2015. All Rights Reserved</p>
-                </div>
+                        </div>
+                    </div> 
+                </p>
             </div>
         </div>
-    </footer>
+    </header>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
 
 </body>
 
