--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
 
     <!-- Plugin CSS -->
@@ -38,10 +37,37 @@
 
     <header>
         <div class="header-content">
+            <div class="header-content-inner">
+                <p>
+                    <div class="row">
+                        <!--
+                        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-6 col-xs-offset-6">
+                            <img class="img-responsive" src="img/logo.png" alt="Delaterra">
+                        </div>
+                        <div class="clearfix"></div>
+                        -->
+                        <div style="margin-top: 25px" class="col-md-6">
+                            <img style="width: 40%; max-width:250px;" src="img/logo.png" alt="Delaterra">
+                            <h2 style="margin-top: 15%; font-size: 2em;">Our website is under construction</h2>
+                            <p style="color:white; font-size: 1.5em;">
+                                Contact us:
+                                <a style="color:white" href="mailto:info@delaterra.co.uk">info@delaterra.co.uk</a>
+                            </p>
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div> 
+                </p>
+            </div>
+        </div>
+    </header>
+
+<!--
+    <header>
+        <div class="header-content">
             <div class="header-content-inner col-md-8 col-lg-8">
                 <p>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-4 col-md-offset-3 col-sm-offset-2">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-lg-offset-4 col-md-offset-3 col-sm-offset-2" style="display:block; height: auto; max-width: 100%;">
                             <img class="img-responsive" src="img/logo.png" alt="Delaterra">
                         </div>
                         <div class="clearfix"></div>
@@ -57,7 +83,7 @@
             </div>
         </div>
     </header>
-
+-->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -66,12 +92,18 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
+    <!--
     <script src="js/jquery.easing.min.js"></script>
+    -->
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
 
+
+
     <!-- Custom Theme JavaScript -->
+    <!--
     <script src="js/creative.js"></script>
+    -->
 
 </body>
 
